fix voor enhanced dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -3,4 +3,5 @@
 @tailwind utilities;
 
 /* project base styles */
+html { color-scheme: dark; }
 body { font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; }
